test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_2.snaphost
HTTP/2.0 200 OK
Content-Length: 36
Content-Type: application/json
Date: Tue, 29 Apr 2025 05:07:24 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=71c15aaea390f4fca9e79bcd8570ae039dbe411b; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"52.234.42.8"}